--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
+  "name": "website",
+  "version": "1.0.0",
+  "author": "Moritz Huber",
+  "private": true,
   "dependencies": {
     "tailwindcss": "^3.1.8"
+  },
+  "scripts": {
+    "css": "npx tailwindcss -o ./public/css/style.css --watch",
+    "dist": "npx tailwindcss -o ./public/css/style.css --minify"
   }
 }
