--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,11 @@
 {
+    "autoload": {
+        "psr-4": {
+            "framework\\": "framework"
+        }
+    },
     "require": {
-        "twig/twig": "^3.4"
+        "twig/twig": "^3.4",
+        "miladrahimi/phprouter": "^5.1"
     }
 }
