--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
-    "autoload": {
-        "psr-4": {
-            "framework\\": "framework"
-        }
-    },
-    "require": {
-        "twig/twig": "^3.4",
-        "miladrahimi/phprouter": "^5.1"
+  "autoload": {
+    "psr-4": {
+      "framework\\": "storage/framework",
+      "app\\": "app"
     }
+  },
+  "require": {
+    "twig/twig": "^3.4",
+    "miladrahimi/phprouter": "^5.1"
+  }
 }
