--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "tailwindcss": "^3.1.8"
   },
   "scripts": {
-    "dev": "npx tailwindcss -i ./src/style.css -o ./public/css/style.css --watch"
+    "dev": "npx tailwindcss -i ./src/style.css -o ./public/css/style.css --watch",
+    "prod": "npx tailwindcss -i ./src/style.css -o ./public/css/style.css --minify"
   }
 }
