--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,6 @@
     "twig/twig": "^3.4",
     "miladrahimi/phprouter": "^5.1",
     "erusev/parsedown": "^1.7",
-    "ext-intl": "*"
+    "ext-pdo": "*"
   }
 }
