router-package gewechselt

--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
   },
   "require": {
     "twig/twig": "^3.4",
-    "miladrahimi/phprouter": "^5.1",
     "erusev/parsedown": "^1.7",
+    "bramus/router": "~1.6",
     "ext-pdo": "*"
   }
 }
